--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -48,13 +48,13 @@
           Christian and Jeannette Fuentes have worked together for over 17 years, been married for 15, and have two kids. They put family and God first and also their health before money. It’s this kind of positive, whole life attitude, along with their personal techniques and proven formula that has made them a Top Producing RE/MAX team.
         </p>
 
-        <button
+        <a
+          href="/about"
           class="title-animation-1 btn-primary-yellow w-full sm:w-fit px-6 sm:px-8 mx-auto block"
           aria-label="Learn more about Christian Fuentes background and experience"
-          onclick="window.location.href='/about'"
         >
           <span>Learn More About Christian</span>
-        </button>
+        </a>
         </div>
         <!-- END Section Heading -->
 
